--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -119,7 +119,11 @@ a {
 	font-size: 0.8em;
 }
 
-.notifyListExampleWrap {position: relative; right: 10px; top: 10px; height: 120px; overflow: hidden;}
+.notifyListExampleWrap {
+	position: relative;
+	overflow: hidden;
+	max-height: 300px;
+}
 .notifyListExampleWrap .notifyList {
 	position: relative;
 	&:after {
