--- a/src/styles/icons-luxbet.less
+++ b/src/styles/icons-luxbet.less
@@ -1,5 +1,5 @@
 @local_white: @white;
-@local_grey: @primary_colour;
+@local_grey: @primary_colour_dark;
 @local_green: @complimentary_colour;
 @local_yelow: @supplementary_colour;
 @local_red: @feature_colour;
@@ -33,7 +33,8 @@
 }
 .icon:after {
 	font-family: "LuxIcon";
-	content: '\e020';//Use ribbon as default
+	content: '\e020'; //Use ribbon as default
+	color: @local_grey;
 	width: 36px;
 	height: 36px;
 	display: inline-block;
@@ -55,7 +56,6 @@
 	width: 60px;
 }
 
-
 .icon.small {
 	height: 20px;
 	width: 20px;
@@ -67,8 +67,6 @@
 	height: 20px;
 	width: 20px;
 }
-
-
 
 .icon.x-small {
 	height: 12px;
@@ -84,7 +82,6 @@
 	width: 12px;
 	vertical-align: initial;
 }
-
 
 /* These 3 racing icons are repeated again later, in thier proper order */
 .icon-sports-horse-racing:after {
@@ -277,9 +274,7 @@
 	content: '\e02d';
 }
 
-
 .icon-other:after {
-	/*font-size: 90%;*/
 	content: '\e01a';
 }
 
@@ -288,10 +283,8 @@
 }
 
 
+
 /* CRESTS */
-
-
-
 /* content: \e02f */
 /*
 .crestWrap {
@@ -623,9 +616,6 @@
 
 /* Small */
 /* Might not need small
-
-
-
 .icon-cheveron.small {
 	height: 20px;
 	width: 20px;
@@ -666,11 +656,11 @@
 	font-size: 22px;
 	line-height: 30px;
 }
-
 EOF Small
  */
-/* RUGS */
 
+
+/* RUGS */
 .icon-rug {
 	display: inline-block;
 	width: 20px;
