--- a/src/styles/lists.less
+++ b/src/styles/lists.less
@@ -8,6 +8,7 @@
 	@local_supplementary: @supplementary_colour;
 
 	@local_border: 1px solid @primary_colour;
+	@local_height: 45px;
 
 	overflow: hidden;
 
@@ -19,10 +20,9 @@
 
 	&.with-icons {
 		li .titleWrap {
-			padding-top: 5px;
-			padding-left: 45px;
+			padding-left: 55px;
 			padding-right: 40px;
-			min-height: 47px;
+			min-height: @local_height;
 		}
 	}
 
@@ -35,14 +35,17 @@
 
 	&.detailed {
 		li {
-			min-height: 47px;
+			min-height: @local_height;
 		}
 		li a {
-			min-height: 47px;
+			min-height: @local_height;
 		}
-
 		li .titleWrap {
-			padding-left: 50px;
+			margin-top: 4px;
+			margin-left: 50px;
+		}
+		li .titleWrap .title {
+			line-height: normal;
 		}
 
 	}
@@ -51,7 +54,7 @@
 		background-color: @local_white;
 		border: @local_border;
 		border-top: none;
-		min-height: 32px;
+		min-height: @local_height;
 		padding-left: 5px;
 		position: relative;
 
@@ -62,7 +65,7 @@
 		display: block;
 		width: 100%;
 		height: 100%;
-		min-height: 32px;
+		min-height: @local_height;
 		position: relative;
 		cursor: pointer;
 	}
@@ -120,14 +123,13 @@
 		.title {
 			display: inline-block;
 			width: 100%;
-			line-height: 15px;
-			height: auto;
+			height: 100%;
 			overflow: visible;
 			text-overflow: ellipsis;
 			white-space: pre-wrap;
-			font-size: 15px;
 			box-sizing: border-box;
 			vertical-align: middle;
+			line-height: @local_height;
 		}
 	}
 
@@ -174,9 +176,4 @@
 		text-align: center;
 
 	}
-
-}
-
-.menu {
-
 }
